--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
+</div>
 <div>
     <h1>Embedding Bootstrap 5 in Jekyll</h1>
 </div>
