worked on hero section

--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 ---
 layout: default
 ---
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
-</div>
-<div>
-    <h1>Embedding Bootstrap 5 in Jekyll</h1>
+<div id="hero-section" class="text-center border-bottom">
+    <img src="{{ site.baseurl }}/assets/img/banner5.png" class="img-fluid shadow-lg mb-12" alt="Hero Banner"
+        loading="lazy">
+    <div class="col-lg-10 mx-auto">
+        <h1 class="display-4 mt-4 fs-2 fw-bold">At Little Chef, Quality is Our Recipe, and Your Satisfaction is Our Secret Sauce!</h1>
+        <p class="lead fs-4 mt-4 mb-4">At Little Chef, we are driven by strength, honesty, and pride. We promise to continue serving you with the same passion and dedication that has made us a beloved part of the community. Your satisfaction is our ultimate goal.
+
+            Join us for a memorable dining experience, where good food and great company come together. Your table is waiting at Little Chef!</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+            <button type="button" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"> visit
+                    us</i></button>
+            <button type="button" class="btn btn-outline-danger btn-lg px-4"> <i
+                    class="bi bi-telephone-fill"> call us</i>
+            </button>
+        </div>
+    </div>
+    <div class="overflow-hidden" style="max-height: 30vh;">
+        <div class="container px-5">
+
+        </div>
+    </div>
 </div>
