--- a/index.html
+++ b/index.html
@@ -2,24 +2,28 @@
 layout: default
 ---
 <div id="hero-section" class="text-center border-bottom">
-    <img src="{{ site.baseurl }}/assets/img/banner5.png" class="img-fluid shadow-lg mb-12" alt="Hero Banner"
-        loading="lazy">
+    <div class="container px-5 py-5">
+        <img src="{{ site.baseurl }}/assets/img/logo_circle.webp" alt="Hero Banner" style="border: none;" width="256"
+            height="256" loading="lazy">
+    </div>
     <div class="col-lg-10 mx-auto">
-        <h1 class="display-4 mt-4 fs-2 fw-bold">At Little Chef, Quality is Our Recipe, and Your Satisfaction is Our Secret Sauce!</h1>
-        <p class="lead fs-4 mt-4 mb-4">At Little Chef, we are driven by strength, honesty, and pride. We promise to continue serving you with the same passion and dedication that has made us a beloved part of the community. Your satisfaction is our ultimate goal.
-
-            Join us for a memorable dining experience, where good food and great company come together. Your table is waiting at Little Chef!</p>
+        <h1 class="display-4 fs-2">Little Chef Diner: Where Quality Meets Heart</h1>
+        <p class="lead mb-4">With strength, honesty, and pride, we pledge to keep doing our best, just as we always
+            have.<br>Join us at Little Chef, where every meal is an experience filled with quality,
+            tradition, and heart.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"> visit
-                    us</i></button>
-            <button type="button" class="btn btn-outline-danger btn-lg px-4"> <i
-                    class="bi bi-telephone-fill"> call us</i>
+            <button type="button" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i> visit
+                us</button>
+            <button type="button" class="btn btn-outline-danger btn-lg px-4"> <i class="bi bi-telephone-fill"></i> call
+                us
             </button>
         </div>
     </div>
-    <div class="overflow-hidden" style="max-height: 30vh;">
-        <div class="container px-5">
+</div>
 
-        </div>
+<div id="hero-section" class="text-center border-bottom">
+    <div class="container px-5 py-5">
+        <img src="{{ site.baseurl }}/assets/img/banner8.png" class="img-fluid border rounded-3 shadow" alt="Hero Banner"
+            width="700" height="500" loading="lazy">
     </div>
 </div>
