--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 ---
 layout: default
 ---
-<div id="hero-section" class="text-center border-bottom">
-    <div class="container px-5 py-5">
-        <img src="{{ site.baseurl }}/assets/img/logo_circle.webp" alt="Hero Banner" style="border: none;" width="256"
-            height="256" loading="lazy">
-    </div>
-    <div class="col-lg-10 mx-auto">
-        <h1 class="display-4 fs-2">Little Chef Diner: Where Quality Meets Heart</h1>
-        <p class="lead mb-4">With strength, honesty, and pride, we pledge to keep doing our best, just as we always
-            have.<br>Join us at Little Chef, where every meal is an experience filled with quality,
-            tradition, and heart.</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i> visit
-                us</button>
-            <button type="button" class="btn btn-outline-danger btn-lg px-4"> <i class="bi bi-telephone-fill"></i> call
-                us
-            </button>
+<div id="hero-section" class="text-center">
+    <div class="container text-center">
+        <div class="row row-cols-2 mt-1 g-5 align-items-center">
+            <div class="col">
+                <div class="card border border-0">
+                    <div class="card-body">
+                        <h1 class="card-title display-5">Little Chef Restaurant: Where Quality Meets Heart</h1>
+                        <p class="card-text fs-5">With strength, honesty, and pride, we pledge to keep doing our best,
+                            just as we
+                            always
+                            have.<br>Join us at Little Chef, where every meal is an experience filled with quality,
+                            tradition, and heart.</p>
+                        <a href="#" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i>
+                            visit
+                            us</a>
+                        <a href="#" class="btn btn-outline-danger btn-lg px-4"><i class="bi bi-telephone-fill"></i> call
+                            us</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="container">
+                    <img src="{{ site.baseurl }}/assets/img/banner8.png" class="img-fluid border rounded-3 shadow-lg"
+                        alt="Hero Banner" loading="lazy">
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<div id="hero-section" class="text-center border-bottom">
-    <div class="container px-5 py-5">
-        <img src="{{ site.baseurl }}/assets/img/banner8.png" class="img-fluid border rounded-3 shadow" alt="Hero Banner"
-            width="700" height="500" loading="lazy">
-    </div>
+<div id="hero-section" class="text-center">
+
 </div>
