updated layout for mobile display. added section for contact info

--- a/index.html
+++ b/index.html
@@ -1,36 +1,71 @@
 ---
 layout: default
 ---
-<div id="hero-section" class="text-center">
-    <div class="container text-center">
-        <div class="row row-cols-2 mt-1 g-5 align-items-center">
-            <div class="col">
-                <div class="card border border-0">
-                    <div class="card-body">
-                        <h1 class="card-title display-5">Little Chef Restaurant: Where Quality Meets Heart</h1>
-                        <p class="card-text fs-5">With strength, honesty, and pride, we pledge to keep doing our best,
-                            just as we
-                            always
-                            have.<br>Join us at Little Chef, where every meal is an experience filled with quality,
-                            tradition, and heart.</p>
-                        <a href="#" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i>
-                            visit
-                            us</a>
-                        <a href="#" class="btn btn-outline-danger btn-lg px-4"><i class="bi bi-telephone-fill"></i> call
-                            us</a>
-                    </div>
+<div class="container text-center">
+    <div class="row row-cols-md-1 row-cols-lg-2 mt-1 mb-5 g-5 align-items-center">
+        <div class="col">
+            <div class="card border border-0">
+                <div class="card-body">
+                    <h1 class="card-title mb-4">Little Chef Restaurant:<br>Where Quality Meets Heart</h1>
+                    <p class="card-text fs-6 text-start mb-4">With strength, honesty, and pride, we pledge to keep doing
+                        our best,
+                        just as we always have. Join us at Little Chef, where every meal is an experience filled
+                        with quality, tradition, and heart.</p>
+                    <a href="#" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i>
+                        Find Us</a>
+                    <a href="#" class="btn btn-outline-danger btn-lg px-4"><i class="bi bi-telephone-fill"></i> Call
+                        Us</a>
                 </div>
             </div>
-            <div class="col">
-                <div class="container">
-                    <img src="{{ site.baseurl }}/assets/img/banner8.png" class="img-fluid border rounded-3 shadow-lg"
-                        alt="Hero Banner" loading="lazy">
-                </div>
+        </div>
+        <div class="col d-md-none d-lg-block">
+            <div class="container">
+                <img src="{{ site.baseurl }}/assets/img/banner8.png" class="img-fluid border rounded-3 shadow-lg"
+                    alt="Hero Banner" loading="lazy">
             </div>
         </div>
     </div>
 </div>
-
-<div id="hero-section" class="text-center">
-
+<hr class="border border-danger border-2 opacity-50">
+<div class="container text-center">
+    <div class="row row-cols-md-1 row-cols-lg-2 mt-1 g-5 align-items-center">
+        <div class="col d-md-none d-lg-block">
+            <div class="container">
+                <img src="{{ site.baseurl }}/assets/img/banner2.png" class="img-fluid border rounded-3 shadow-lg"
+                    alt="Hero Banner" loading="lazy">
+            </div>
+        </div>
+        <div class="col">
+            <div class="row row-cols-2">
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Location</h5>
+                            <a class="card-link" href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">
+                                <i class="bi bi-geo-alt-fill text-danger"></i> 152 Strode Ave Coatesville, PA 19320
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Phone</h5>
+                            <a class="card-link" href="tel:+16103843221">
+                                <i class="bi bi-telephone-fill text-danger"></i> 610-384-3221
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Hours</h5>
+                            <p class="card-text">
+                                Monday- Closed<br>
+                                Tuesday 6AM–3PM<br>
+                                Wednesday-Friday 6AM–9PM<br>
+                                Saturday-Sunday 6AM–3PM</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
