--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 <div class="container text-center">
-    <div class="row row-cols-md-1 row-cols-lg-2 mt-1 mb-5 g-5 align-items-center">
+    <div class="row row-cols-md-1 row-cols-lg-2 mt-1 mb-5 gy-5 align-items-center">
         <div class="col">
             <div class="card border border-0">
-                <div class="card-body">
-                    <h1 class="card-title mb-4">Little Chef Restaurant:<br>Where Quality Meets Heart</h1>
-                    <p class="card-text fs-6 text-start mb-4">With strength, honesty, and pride, we pledge to keep doing
+                <div class="card-body text-start">
+                    <h1 class="card-title display-4 mb-4">Little Chef Restaurant:<br>Where Quality Meets Heart</h1>
+                    <p class="card-text fs-5 mb-4">With strength, honesty, and pride, we pledge to keep doing
                         our best,
                         just as we always have. Join us at Little Chef, where every meal is an experience filled
                         with quality, tradition, and heart.</p>
@@ -26,7 +26,7 @@ layout: default
         </div>
     </div>
 </div>
-<hr class="border border-danger border-2 opacity-50">
+<div class="divider"></div>
 <div class="container text-center">
     <div class="row row-cols-md-1 row-cols-lg-2 mt-1 g-5 align-items-center">
         <div class="col d-md-none d-lg-block">
