--- a/index.html
+++ b/index.html
@@ -21,20 +21,15 @@ layout: default
     </div>
 </div>
 <div class="container-fluid">
-    <div id="details" class="row row-cols-md-1 row-cols-lg-2 p-5 align-items-center container-gradient-md container-gradient-lg">
-        <div class="col d-md-none d-lg-block">
-            <div class="container">
-                <img src="{{ site.baseurl }}/assets/img/banner2.png" class="img-fluid border rounded-3 shadow-lg"
-                    alt="Hero Banner" loading="lazy">
-            </div>
-        </div>
+    <div id="details" class="row row-cols-1 p-5 align-items-center container-gradient">
         <div class="col">
             <div class="row row-cols-2">
                 <div class="col">
                     <div class="card h-100 border border-0 text-end bg-transparent">
                         <div class="card-body">
-                            <p class="card-title fw-semibold">Hours</p>
-                            <p class="card-text lh-lg">
+                            <p class="card-title fs-4 fw-semibold">Hours <i class="bi bi-clock-fill text-danger"></i>
+                            </p>
+                            <p class="card-text lh-lg fs-5 fw-medium">
                                 Monday- Closed<br>
                                 Tuesday 6AM–3PM<br>
                                 Wednesday-Friday 6AM–9PM<br>
@@ -46,13 +41,18 @@ layout: default
                 <div class="col">
                     <div class="card h-100 border border-0 bg-transparent">
                         <div class="card-body">
-                            <p class="card-title fw-semibold">Location</p>
-                            <a class="card-link link-danger" href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">152 Strode Ave
+                            <p class="card-title fs-4 fw-semibold"><i class="bi bi-geo-alt-fill text-danger"></i>
+                                Location</p>
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium"
+                                href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">152 Strode
+                                Ave
                                 Coatesville, PA 19320</a>
                         </div>
                         <div class="card-body">
-                            <p class="card-title fw-semibold">Phone</p>
-                            <a class="card-link link-danger" href="tel:+16103843221">
+                            <p class="card-title fs-4 fw-semibold"><i class="bi bi-telephone-fill text-danger"></i>
+                                Phone</p>
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium"
+                                href="tel:+16103843221">
                                 610-384-3221
                             </a>
                         </div>
@@ -65,47 +65,41 @@ layout: default
 <div class="container-fluid">
     <div id="menus" class="row row-cols-md-1 p-5 align-items-start">
         <div class="col">
-            <ul class="nav nav-tabs">
-                {% for menu in site.data.menus %}
+            <ul class="nav nav-tabs mb-3">
+                {% for navItem in site.data.menus.navItems %}
                 <li class="nav-item">
                     {% if forloop.first %}
-                    <a class="nav-link active" aria-current="page" href="#menus">{{menu.name}}</a>
+                    <a class="nav-link active" aria-current="page" href="#menus">{{navItem.name}}</a>
                     {% else %}
-                    <a class="nav-link" aria-current="page" href="#menus">{{menu.name}}</a>
+                    <a class="nav-link" aria-current="page" href="#menus">{{navItem.name}}</a>
                     {% endif %}
                 </li>
                 {% endfor %}
             </ul>
         </div>
-    </div>
-    <!-- Breakfast Menu -->
-    <div class="menu-section">
-        <h2>Breakfast Menu</h2>
-        <div class="menu-group">
-            <h4>Group 1</h4>
-            <div class="row">
-                <!-- Add cards for each dish in Group 1 -->
-                <!-- Repeat this block for other groups and dishes -->
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="dish1.jpg" class="card-img-top" alt="Dish 1 Image">
-                        <div class="card-body">
-                            <h5 class="card-title">Dish 1</h5>
-                            <p class="card-text">Description of Dish 1.</p>
-                            <p class="card-text">$10.99</p>
+        <div class="col">
+            {% for section in site.data.menus.sections %}
+            <div class="menu-group mb-5">
+                <h2 class="mb-3">{{section.name}}</h2>
+                <div class="row g-3">
+                    <!-- Add cards for each dish in Group 1 -->
+                    <!-- Repeat this block for other groups and dishes -->
+                    {% for dish in section.dishes %}
+                    <div class="col-md-3">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <p class="card-title fw-semibold">{{dish.name}}</p>
+                                {% if dish.description %}
+                                <p class="card-text">{{dish.description}}</p>
+                                {% endif %}
+                                <p class="card-text">{{dish.price}}</p>
+                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                <!-- Repeat this block for other dishes in Group 1 -->
             </div>
+            {% endfor %}
         </div>
-        <!-- Repeat this block for other groups in the breakfast menu -->
     </div>
-
-    <!-- Everything Else Menu -->
-    <div class="menu-section">
-        <h2>Everything Else Menu</h2>
-        <!-- Repeat the same structure as above for the "Everything Else" menu -->
-    </div>
-
 </div>
