adjusting section background and font settings

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
                         <div class="card-body">
                             <p class="card-title fs-4 fw-semibold">Hours <i class="bi bi-clock-fill text-danger"></i>
                             </p>
-                            <p class="card-text lh-lg fs-5 fw-medium">
+                            <p class="card-text lh-lg fs-5 fw-medium text-uppercase">
                                 Monday- Closed<br>
                                 Tuesday 6AM–3PM<br>
                                 Wednesday-Friday 6AM–9PM<br>
@@ -43,7 +43,7 @@ layout: default
                         <div class="card-body">
                             <p class="card-title fs-4 fw-semibold"><i class="bi bi-geo-alt-fill text-danger"></i>
                                 Location</p>
-                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium"
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium text-uppercase"
                                 href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">152 Strode
                                 Ave
                                 Coatesville, PA 19320</a>
@@ -51,7 +51,7 @@ layout: default
                         <div class="card-body">
                             <p class="card-title fs-4 fw-semibold"><i class="bi bi-telephone-fill text-danger"></i>
                                 Phone</p>
-                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium"
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium text-uppercase"
                                 href="tel:+16103843221">
                                 610-384-3221
                             </a>
