updating hero section font settings for mobile. Made navbar white to match the hero section background.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
     <div class="row row-cols-md-1 row-cols-lg-2 p-5 align-items-center">
         <div class="col text-md-center text-lg-start">
             <h1 class="card-title display-5 mb-4">Little Chef Restaurant:<br>Where Quality Meets Heart</h1>
-            <p class="card-text fs-5 mb-4">With strength, honesty, and pride, we pledge to keep doing
+            <p class="card-text fs-5 mb-4 px-md-5 px-lg-0">With strength, honesty, and pride, we pledge to keep doing
                 our best,
                 just as we always have.<br>Join us at Little Chef, where every meal is an experience filled
                 with quality, tradition, and heart.</p>
