--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 layout: default
 ---
 <div class="container-fluid">
-    <div class="row row-cols-md-1 row-cols-lg-2 p-5 align-items-center">
+    <div class="row row-cols-md-1 row-cols-lg-2 p-5 mb-3 align-items-center">
         <div class="col text-md-center text-lg-start">
-            <h1 class="card-title display-5 mb-4">Little Chef Restaurant:<br>Where Quality Meets Heart</h1>
-            <p class="card-text fs-5 mb-4 px-md-5 ps-lg-0 pe-lg-5 text-md-start">With strength, honesty, and pride, we pledge to keep doing
+            <h1 class="card-title display-5 mb-4">Little Chef Family Restaurant:<br>Where Quality Meets Heart</h1>
+            <p class="card-text fs-5 mb-4 px-md-5 ps-lg-0 pe-lg-5 text-md-start">With strength, honesty, and pride, we
+                pledge to keep doing
                 our best,
                 just as we always have. Join us at Little Chef, where every meal is an experience filled
                 with quality, tradition, and heart.</p>
@@ -21,7 +22,7 @@ layout: default
     </div>
 </div>
 <div class="container-fluid">
-    <div id="details" class="row row-cols-1 p-5 align-items-center container-gradient">
+    <div id="details" class="row row-cols-1 p-5 mb-3 align-items-center container-gradient">
         <div class="col">
             <div class="row row-cols-2">
                 <div class="col">
@@ -63,19 +64,28 @@ layout: default
     </div>
 </div>
 <div class="container-fluid">
-    <div id="menus" class="row row-cols-md-1 p-5 align-items-start">
+    <div id="menus" class="row row-cols-1 p-5 g-4 align-items-start">
         <div class="col">
-            <ul class="nav nav-tabs mb-3">
-                {% for navItem in site.data.menus.navItems %}
-                <li class="nav-item">
-                    {% if forloop.first %}
-                    <a class="nav-link active" aria-current="page" href="#menus">{{navItem.name}}</a>
-                    {% else %}
-                    <a class="nav-link" aria-current="page" href="#menus">{{navItem.name}}</a>
-                    {% endif %}
-                </li>
-                {% endfor %}
-            </ul>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <p class="col-form-label">Menu</p>
+                </div>
+                <div class="col-md-4 col-lg-3 me-auto">
+                    <input class="form-control" list="datalistOptions" id="menuSearch"
+                        placeholder="Enter a dish name to search...">
+                    <datalist id="datalistOptions">
+                        {% for section in site.data.menus.sections %}
+                        {% for dish in section.dishes %}
+                        <option value="{{dish.name}}">
+                            {% endfor %}
+                            {% endfor %}
+                    </datalist>
+                </div>
+                <div class="col-auto">
+                    <img src="{{ site.baseurl }}/assets/img/logo_inner_circle.png" alt="Brand Logo" width="32"
+                        height="32" class="img-fluid d-inline-block align-text-top">
+                </div>
+            </div>
         </div>
         <div class="col">
             {% for section in site.data.menus.sections %}
@@ -89,8 +99,8 @@ layout: default
                         <div class="card h-100">
                             <div class="card-body">
                                 <div class="d-flex justify-content-between">
-                                <p class="card-title fw-bold">{{dish.name}}</p>
-                                <p class="card-title">{{dish.price}}</p>
+                                    <p class="card-title fw-bold">{{dish.name}}</p>
+                                    <p class="card-title">{{dish.price}}</p>
                                 </div>
                                 {% if dish.description %}
                                 <p class="card-text">{{dish.description}}</p>
