--- a/index.html
+++ b/index.html
@@ -3,59 +3,71 @@ layout: default
 ---
 <div class="container-fluid">
     <div class="row row-cols-md-1 row-cols-lg-2 p-5 mb-3 align-items-center">
-        <div class="col text-md-center text-lg-start">
-            <h1 class="card-title display-5 mb-4">Little Chef Family Restaurant:<br>Where Quality Meets Heart</h1>
-            <p class="card-text fs-5 mb-4 px-md-5 ps-lg-0 pe-lg-5 text-md-start">With strength, honesty, and pride, we
-                pledge to keep doing
-                our best,
-                just as we always have. Join us at Little Chef, where every meal is an experience filled
-                with quality, tradition, and heart.</p>
+        <div class="col text-center">
+            <h1 class="d-md-none d-lg-block display-5 mb-4">{{site.data.text.heroTitle}}</h1>
+            <h1 class="d-lg-none d-md-block display-2 mb-4">{{site.data.text.smallDevice.heroTitle}}</h1>
+            <p class="d-md-none d-lg-block lead mb-4 px-5">{{site.data.text.heroSubtitle}}</p>
+            <p class="d-lg-none d-md-block fs-2 lead mb-5 px-5">{{site.data.text.heroSubtitle}}</p>
+
             <a href="#" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i>
                 Find Us</a>
             <a href="#" class="btn btn-outline-danger btn-lg px-4"><i class="bi bi-telephone-fill"></i> Call
                 Us</a>
         </div>
         <div class="col d-md-none d-lg-block">
-            <img src="{{ site.baseurl }}/assets/img/banner8.png" class="img-fluid border rounded-3 shadow-lg"
+            <img src="{{ site.baseurl }}/assets/img/banner9.png" class="img-fluid border rounded-3 shadow-lg"
                 alt="Hero Banner" loading="lazy">
+
         </div>
     </div>
 </div>
 <div class="container-fluid">
-    <div id="details" class="row row-cols-1 p-5 mb-3 align-items-center container-gradient">
+    <div id="details" class="row row-cols-1 py-5 mb-3 align-items-center container-gradient">
         <div class="col">
-            <div class="row row-cols-2">
+            <div class="row row-cols-lg-3 text-blur">
                 <div class="col">
-                    <div class="card h-100 border border-0 text-end bg-transparent">
+                    <div class="card h-100 border border-0 text-end bg-transparent text-white">
                         <div class="card-body">
-                            <p class="card-title fs-4 fw-semibold">Hours <i class="bi bi-clock-fill text-danger"></i>
+                            <p class="card-title fs-4">Business Hours <i class="bi bi-clock-fill text-danger"></i>
                             </p>
-                            <p class="card-text lh-lg fs-5 fw-medium text-uppercase">
-                                Monday- Closed<br>
-                                Tuesday 6AM–3PM<br>
-                                Wednesday-Friday 6AM–9PM<br>
-                                Saturday-Sunday 6AM–3PM</p>
+                            <p class="card-text lh-lg fs-6 text-uppercase">
+                                Monday - Closed<br>
+                                Tuesday 6AM - 3PM<br>
+                                Wednesday - Friday 6AM - 9PM<br>
+                                Saturday - Sunday 6AM - 3PM</p>
                         </div>
-
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100 border border-0 bg-transparent">
+                    <div class="card h-100 border border-0 bg-transparent text-center text-white">
                         <div class="card-body">
-                            <p class="card-title fs-4 fw-semibold"><i class="bi bi-geo-alt-fill text-danger"></i>
+                            <p class="card-title fs-4"><i class="bi bi-geo-alt-fill text-danger"></i>
                                 Location</p>
-                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium text-uppercase"
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-6 fw-medium text-uppercase text-white"
                                 href="https://goo.gl/maps/79WqFn2AeFe1pQdy9">152 Strode
                                 Ave
                                 Coatesville, PA 19320</a>
                         </div>
                         <div class="card-body">
-                            <p class="card-title fs-4 fw-semibold"><i class="bi bi-telephone-fill text-danger"></i>
+                            <p class="card-title fs-4"><i class="bi bi-telephone-fill text-danger"></i>
                                 Phone</p>
-                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-5 fw-medium text-uppercase"
+                            <a class="card-link link-dark link-underline link-underline-opacity-0 link-underline-opacity-75-hover fs-6 fw-medium text-uppercase text-white"
                                 href="tel:+16103843221">
-                                610-384-3221
+                                (610) 384 - 3221
                             </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border border-0 text-start bg-transparent text-white">
+                        <div class="card-body">
+                            <p class="card-title fs-4">Delivery Hours <i class="bi bi-clock-fill text-danger"></i>
+                            </p>
+                            <p class="card-text lh-lg fs-6 text-uppercase">
+                                Monday- Closed<br>
+                                Tuesday 7AM - 3PM<br>
+                                Wednesday - Friday 7AM - 9PM<br>
+                                Saturday - Sunday 7AM - 3PM</p>
                         </div>
                     </div>
                 </div>
