introducing a new illustration to the hero section. moved buttons to the bottom of hero section

--- a/index.html
+++ b/index.html
@@ -2,22 +2,16 @@
 layout: default
 ---
 <div class="container-fluid">
-    <div class="row row-cols-md-1 row-cols-lg-2 p-5 mb-3 align-items-center">
+    <div class="row row-cols-1 p-5 mb-3 align-items-center bg-black">
+        <div class="col text-center p-5">
+            <img src="{{ site.baseurl }}/assets/img/hero_design1.svg" class="img-fluid" alt="Hero Banner"
+                loading="lazy">            
+        </div>
         <div class="col text-center">
-            <h1 class="d-md-none d-lg-block display-4 mb-4">{{site.data.text.heroTitle}}</h1>
-            <h1 class="d-lg-none d-md-block display-3 mb-4">{{site.data.text.smallDevice.heroTitle}}</h1>
-            <p class="d-md-none d-lg-block fs-5 lead mb-4 px-5">{{site.data.text.heroSubtitle}}</p>
-            <p class="d-lg-none d-md-block fs-4 lead mb-5 px-5">{{site.data.text.heroSubtitle}}</p>
-
             <a href="#" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i>
                 Find Us</a>
             <a href="#" class="btn btn-outline-danger btn-lg px-4"><i class="bi bi-telephone-fill"></i> Call
                 Us</a>
-        </div>
-        <div class="col d-md-none d-lg-block">
-            <img src="{{ site.baseurl }}/assets/img/banner9.png" class="img-fluid border rounded-3 shadow-lg"
-                alt="Hero Banner" loading="lazy">
-
         </div>
     </div>
 </div>
@@ -34,7 +28,7 @@ layout: default
                                 Monday - Closed<br>
                                 Tuesday 6AM - 3PM<br>
                                 Wednesday - Friday 6AM - 9PM<br>
-                                Saturday - Sunday  6AM - 3PM</p>
+                                Saturday - Sunday 6AM - 3PM</p>
                         </div>
                     </div>
                 </div>
@@ -66,8 +60,8 @@ layout: default
                             <p class="card-text lh-lg fs-6">
                                 Monday - Closed<br>
                                 Tuesday: 7AM - 3PM<br>
-                                Wednesday - Friday  7AM - 9PM<br>
-                                Saturday - Sunday  7AM - 3PM</p>
+                                Wednesday - Friday 7AM - 9PM<br>
+                                Saturday - Sunday 7AM - 3PM</p>
                         </div>
                     </div>
                 </div>
