added missing links to hero buttons. updated buttons layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@ layout: default
                 loading="lazy">            
         </div>
         <div class="col text-center">
-            <a href="#" class="btn btn-danger btn-lg px-4 me-sm-3"><i class="bi bi-geo-alt-fill"></i>
-                Find Us</a>
-            <a href="#" class="btn btn-outline-danger btn-lg px-4"><i class="bi bi-telephone-fill"></i> Call
-                Us</a>
+            <a href="https://goo.gl/maps/79WqFn2AeFe1pQdy9" class="btn btn-danger btn-lg px-5 me-sm-4"><i
+                class="bi bi-geo-alt-fill"></i>
+            Find Us</a>
+        <a href="tel:+16103843221" class="btn btn-outline-danger btn-lg px-5"><i
+                class="bi bi-telephone-fill"></i> Call
+            Us</a>
         </div>
     </div>
 </div>
